force-app/main/default/objects/Fulfillment_Item__c/fields/ILT_Class_Type__c.field-meta.xml
<CustomField>
    <fullName>ILT_Class_Type__c</fullName>
    <formula>Text(ILT_Class__r.Course_Class_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ILT Class Type</label>
    <type>Text</type>
</CustomField>