force-app/main/default/objects/Fulfillment_Item__c/fields/ILT_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>ILT_Request_Type__c</fullName>
    <formula>Text(ILT_Class__r.Request_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ILT Request Type</label>
    <type>Text</type>
</CustomField>