force-app/main/default/objects/Fulfillment_Item__c/fields/Is_updated__c.field-meta.xml
<CustomField>
    <fullName>Is_updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is updated</label>
    <type>Checkbox</type>
</CustomField>