force-app/main/default/objects/Fulfillment_Item__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Order to be fulfilled</description>
    <label>Order</label>
    <referenceTo>ccrz__E_Order__c</referenceTo>
    <relationshipLabel>Fulfillment Items</relationshipLabel>
    <relationshipName>Fulfillment_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>