force-app/main/default/objects/Fulfillment_Item__c/fields/State_Formula__c.field-meta.xml
<CustomField>
    <fullName>State_Formula__c</fullName>
    <description>Set state value for Training Revenue</description>
    <formula>IF(  AND(!ISBLANK(ILT_Class__c), Order__r.ccrz__Storefront__c &lt;&gt; &quot;CREStore&quot;), 
 IF(
    AND(!ISBLANK(ILT_Class__r.Skedulo_Job_Id__c), !ISBLANK( ILT_Class__r.Location_State__c )),
    ILT_Class__r.Location_State__c, Order__r.ccrz__Account__r.BillingState ) ,Order__r.ccrz__Account__r.BillingState)</formula>
    <label>State Formula</label>
    <type>Text</type>
</CustomField>