force-app/main/default/objects/Fulfillment_Item__c/fields/Zip_Formula__c.field-meta.xml
<CustomField>
    <fullName>Zip_Formula__c</fullName>
    <formula>IF(  AND(!ISBLANK(ILT_Class__c), Order__r.ccrz__Storefront__c &lt;&gt; &quot;CREStore&quot;), 
 IF(
    AND(!ISBLANK(ILT_Class__r.Skedulo_Job_Id__c), !ISBLANK( ILT_Class__r.Location_ZIP_Code__c )),
     ILT_Class__r.Location_ZIP_Code__c ,  Order__r.ccrz__Account__r.BillingPostalCode  ) ,Order__r.ccrz__Account__r.BillingPostalCode)</formula>
    <label>Zip Formula</label>
    <type>Text</type>
</CustomField>